# Twitter_stock_analyzer

./: README.md  pyproject.toml
twitter_stock_analyzer/: Matplotlib_services.py  Pull_stock_data.py  Pull_twitter_data.py  main.py
